--- a/packages/bootstrap/scss/grid/_theme.scss
+++ b/packages/bootstrap/scss/grid/_theme.scss
@@ -1,4 +1,4 @@
-@include exports("grid/theme") {
+@include exports( "grid/theme" ) {
 
     // Theme
     .k-grid {
@@ -142,7 +142,7 @@
         .k-hierarchy-cell .k-icon {
             &:focus,
             &.k-focus {
-                box-shadow: inset 0 0 0 2px rgba( 0, 0, 0, .1 );
+                box-shadow: inset 0 0 0 2px rgba( black, .1 );
             }
             &.k-active {
                 color: $selected-text;
