--- a/packages/bootstrap/scss/orgchart/_variables.scss
+++ b/packages/bootstrap/scss/orgchart/_variables.scss
@@ -1,5 +1,5 @@
 // Orgchart
-$orgchart-spacer: map-get( $spacing, 6 ) !default;
+$orgchart-spacer: k-map-get( $spacing, 6 ) !default;
 $orgchart-padding-y: $orgchart-spacer !default;
 $orgchart-padding-x: $orgchart-padding-y !default;
 $orgchart-font-family: $font-family !default;
