--- a/packages/bootstrap/scss/stepper/_variables.scss
+++ b/packages/bootstrap/scss/stepper/_variables.scss
@@ -33,7 +33,7 @@ $stepper-indicator-bg: $component-bg !default;
 $stepper-indicator-text: $component-text !default;
 $stepper-indicator-border: $component-border !default;
 
-$stepper-indicator-hover-bg: try-shade( $stepper-indicator-bg ) !default;
+$stepper-indicator-hover-bg: k-try-shade( $stepper-indicator-bg ) !default;
 $stepper-indicator-hover-text: null !default;
 $stepper-indicator-hover-border: null !default;
 
@@ -42,15 +42,15 @@ $stepper-indicator-disabled-text: $disabled-text !default;
 $stepper-indicator-disabled-border: null !default;
 
 $stepper-indicator-done-bg: $primary !default;
-$stepper-indicator-done-text: contrast-wcag( $stepper-indicator-done-bg ) !default;
+$stepper-indicator-done-text: k-contrast-color( $stepper-indicator-done-bg ) !default;
 $stepper-indicator-done-border: $stepper-indicator-done-bg !default;
 
-$stepper-indicator-done-hover-bg: try-shade( $stepper-indicator-done-bg ) !default;
+$stepper-indicator-done-hover-bg: k-try-shade( $stepper-indicator-done-bg ) !default;
 $stepper-indicator-done-hover-text: null !default;
 $stepper-indicator-done-hover-border: null !default;
 
-$stepper-indicator-done-disabled-bg: mix( $stepper-indicator-done-bg, $component-bg, 60%) !default;
-$stepper-indicator-done-disabled-text: contrast-wcag( $stepper-indicator-done-bg ) !default;
+$stepper-indicator-done-disabled-bg: k-color-mix( $stepper-indicator-done-bg, $component-bg, 60%) !default;
+$stepper-indicator-done-disabled-text: k-contrast-color( $stepper-indicator-done-bg ) !default;
 $stepper-indicator-done-disabled-border: $stepper-indicator-done-disabled-bg !default;
 
 $stepper-indicator-current-bg: $stepper-indicator-done-bg !default;
