--- a/packages/bootstrap/scss/timeline/_variables.scss
+++ b/packages/bootstrap/scss/timeline/_variables.scss
@@ -13,9 +13,9 @@ $timeline-mobile-spacing-y: $padding-x !default;
 $timeline-track-arrow-width: 38px !default;
 $timeline-track-arrow-height: 38px !default;
 
-$timeline-track-arrow-disabled-text: true-mix($kendo-button-text, $body-bg, 65%) !default;
-$timeline-track-arrow-disabled-bg: true-mix($kendo-button-bg, $body-bg, 65%) !default;
-$timeline-track-arrow-disabled-border: true-mix($kendo-button-border, $body-bg, 65%) !default;
+$timeline-track-arrow-disabled-text: k-true-mix( $kendo-button-text, $body-bg, 65% ) !default;
+$timeline-track-arrow-disabled-bg: k-true-mix( $kendo-button-bg, $body-bg, 65% ) !default;
+$timeline-track-arrow-disabled-border: k-true-mix( $kendo-button-border, $body-bg, 65% ) !default;
 
 $timeline-track-size: 6px !default;
 $timeline-track-wrap-padding-bottom: $timeline-track-size / 2 !default;
@@ -27,7 +27,7 @@ $timeline-track-end-calc: calc(#{$timeline-track-arrow-width} - 2 * #{$timeline-
 $timeline-track-bg: $kendo-button-bg !default;
 $timeline-track-border-color: $timeline-track-bg !default;
 
-$timeline-track-item-focus-shadow: 0 0 0 3px rgba($primary, .5) !default;
+$timeline-track-item-focus-shadow: 0 0 0 3px rgba( $primary, .5 ) !default;
 
 $timeline-track-event-offset: 36px !default;
 
@@ -39,7 +39,7 @@ $timeline-flag-max-width: calc(#{$timeline-flag-min-width} + 2 * #{$timeline-spa
 $timeline-mobile-flag-max-width: calc(#{$timeline-flag-min-width} + 2 * #{$timeline-mobile-spacing-x}) !default;
 $timeline-horizontal-flag-min-width: 80px !default;
 $timeline-flag-bg: $primary !default;
-$timeline-flag-text: contrast-wcag( $timeline-flag-bg ) !default;
+$timeline-flag-text: k-contrast-color( $timeline-flag-bg ) !default;
 
 $timeline-flag-callout-width: 10px !default;
 $timeline-flag-callout-height: 10px !default;
