--- a/packages/bootstrap/scss/window/_variables.scss
+++ b/packages/bootstrap/scss/window/_variables.scss
@@ -5,8 +5,8 @@ $window-font-family: $font-family !default;
 $window-font-size: $font-size !default;
 $window-line-height: $line-height !default;
 
-$window-titlebar-padding-x: map-get( $spacing, 4 ) !default;
-$window-titlebar-padding-y: map-get( $spacing, 4 ) !default;
+$window-titlebar-padding-x: k-map-get( $spacing, 4 ) !default;
+$window-titlebar-padding-y: k-map-get( $spacing, 4 ) !default;
 $window-titlebar-border-width: 0 0 1px !default;
 $window-titlebar-border-style: solid !default;
 
@@ -18,8 +18,8 @@ $window-actions-gap: .5rem !default;
 $window-action-opacity: .5 !default;
 $window-action-hover-opacity: .75 !default;
 
-$window-inner-padding-x: map-get( $spacing, 4 ) !default;
-$window-inner-padding-y: map-get( $spacing, 4 ) !default;
+$window-inner-padding-x: k-map-get( $spacing, 4 ) !default;
+$window-inner-padding-y: k-map-get( $spacing, 4 ) !default;
 
 $window-buttongroup-padding-x: $actions-padding-x !default;
 $window-buttongroup-padding-y: $actions-padding-y !default;
