--- a/packages/bootstrap/scss/badge/_variables.scss
+++ b/packages/bootstrap/scss/badge/_variables.scss
@@ -12,14 +12,14 @@ $kendo-badge-border-radius: $badge-border-radius !default;
 /// Horizontal padding of the badge.
 /// @group badge
 $kendo-badge-padding-x: $badge-padding-x !default;
-$kendo-badge-padding-x-sm: ( $badge-padding-x / 2 ) !default;
+$kendo-badge-padding-x-sm: k-math-div( $badge-padding-x, 2 ) !default;
 $kendo-badge-padding-x-md: $badge-padding-x !default;
 $kendo-badge-padding-x-lg: ( $badge-padding-x * 1.5 ) !default;
 
 /// Vertical padding of the badge.
 /// @group badge
 $kendo-badge-padding-y: $badge-padding-y !default;
-$kendo-badge-padding-y-sm: ( $badge-padding-y / 2 )  !default;
+$kendo-badge-padding-y-sm: k-math-div( $badge-padding-y, 2 )  !default;
 $kendo-badge-padding-y-md: $badge-padding-y !default;
 $kendo-badge-padding-y-lg: ( $badge-padding-y * 1.5 ) !default;
 
