--- a/packages/bootstrap/scss/breadcrumb/_variables.scss
+++ b/packages/bootstrap/scss/breadcrumb/_variables.scss
@@ -17,7 +17,7 @@ $breadcrumb-delimiter-icon-font-size: $icon-size * .75 !default;
 $breadcrumb-delimiter-icon-padding-x: $kendo-button-padding-y !default;
 $breadcrumb-delimiter-icon-padding-y: 0px !default;
 
-$breadcrumb-link-padding-x: $padding-x-lg / 2 !default;
+$breadcrumb-link-padding-x: k-math-div( $padding-x-lg, 2 ) !default;
 $breadcrumb-link-padding-y: $padding-y !default;
 $breadcrumb-link-border-radius: $kendo-border-radius-md !default;
 
@@ -55,4 +55,4 @@ $breadcrumb-root-link-focused-text: null !default;
 $breadcrumb-root-link-focused-border: null !default;
 $breadcrumb-root-link-focused-shadow: $breadcrumb-link-focused-shadow !default;
 
-$breadcrumb-focused-shadow: 0 0 2px 1px rgba(0, 0, 0, .06) !default;
+$breadcrumb-focused-shadow: 0 0 2px 1px rgba( black, .06 ) !default;
