--- a/packages/bootstrap/scss/card/_variables.scss
+++ b/packages/bootstrap/scss/card/_variables.scss
@@ -8,7 +8,7 @@ $card-font-family: $font-family !default;
 $card-font-size: $font-size !default;
 $card-line-height: $line-height !default;
 
-$card-deck-gap: map-get( $spacing, 4 ) !default;
+$card-deck-gap: k-map-get( $spacing, 4 ) !default;
 
 $card-bg: $component-bg !default;
 $card-text: $component-text !default;
@@ -37,14 +37,14 @@ $card-footer-bg: $card-header-bg !default;
 $card-footer-text: $card-header-text !default;
 $card-footer-border: $card-header-border !default;
 
-$card-title-margin-bottom: map-get( $spacing, md ) !default;
+$card-title-margin-bottom: k-map-get( $spacing, md ) !default;
 $card-title-font-size: $h5-font-size !default;
 $card-title-font-family: $headings-font-family !default;
 $card-title-line-height: $headings-line-height !default;
 $card-title-font-weight: $headings-font-weight !default;
 $card-title-letter-spacing: null !default;
 
-$card-subtitle-margin-bottom: map-get( $spacing, md ) !default;
+$card-subtitle-margin-bottom: k-map-get( $spacing, md ) !default;
 $card-subtitle-font-size: $h6-font-size !default;
 $card-subtitle-font-family: $headings-font-family !default;
 $card-subtitle-line-height: $headings-line-height !default;
@@ -56,10 +56,10 @@ $card-img-max-width: 100px !default;
 $card-avatar-size: 45px !default;
 $card-avatar-spacing: $card-header-padding-x !default;
 
-$card-actions-padding-x: map-get( $spacing, 2 ) !default;
-$card-actions-padding-y: map-get( $spacing, 2 ) !default;
+$card-actions-padding-x: k-map-get( $spacing, 2 ) !default;
+$card-actions-padding-y: k-map-get( $spacing, 2 ) !default;
 $card-actions-border-width: 1px !default;
-$card-actions-gap: map-get( $spacing, 2 ) !default;
+$card-actions-gap: k-map-get( $spacing, 2 ) !default;
 
 $card-deck-scroll-button-radius: 0px !default;
 $card-deck-scroll-button-offset: -$kendo-button-border-width !default;
