--- a/packages/bootstrap/scss/drawer/_variables.scss
+++ b/packages/bootstrap/scss/drawer/_variables.scss
@@ -8,15 +8,15 @@ $drawer-font-size: $font-size !default;
 $drawer-line-height: $line-height !default;
 $drawer-content-padding-x: $padding-x !default;
 $drawer-content-padding-y: $padding-y !default;
-$drawer-item-level-padding-x: map-get( $spacing, 4 ) !default;
+$drawer-item-level-padding-x: k-map-get( $spacing, 4 ) !default;
 
 $drawer-item-level-count: 5 !default;
 
 $drawer-scrollbar-width: 7px !default;
-$drawer-scrollbar-color: rgba(156, 156, 156, .7) !default;
+$drawer-scrollbar-color: rgba( 156, 156, 156, .7 ) !default;
 $drawer-scrollbar-bg: #dedede !default;
 $drawer-scrollbar-radius: 20px !default;
-$drawer-scrollbar-hovered-color: rgba(156, 156, 156, 1) !default;
+$drawer-scrollbar-hovered-color: rgba( 156, 156, 156, 1 ) !default;
 
 $drawer-item-padding-x: $padding-x !default;
 $drawer-item-padding-y: $padding-y !default;
@@ -24,15 +24,15 @@ $drawer-item-font-size: 16px !default;
 $drawer-item-line-height: $line-height-lg !default;
 $drawer-icon-size: $icon-size !default;
 
-$drawer-mini-initial-width: calc(2 * #{$drawer-item-padding-x} + #{$drawer-icon-size}) !default;
+$drawer-mini-initial-width: calc( 2 * #{$drawer-item-padding-x} + #{$drawer-icon-size} ) !default;
 
 $drawer-hovered-bg: $hovered-bg !default;
 $drawer-hovered-text: $hovered-text !default;
 
 $drawer-focused-bg: $hovered-bg !default;
-$drawer-focused-shadow: inset 0 0 0 2px rgba( 0, 0, 0, .15) !default;
+$drawer-focused-shadow: inset 0 0 0 2px rgba( black, .15 ) !default;
 
 $drawer-selected-bg: $selected-bg !default;
 $drawer-selected-text: $selected-text !default;
-$drawer-selected-hover-bg: try-shade( $selected-bg, 1 ) !default;
+$drawer-selected-hover-bg: k-try-shade( $selected-bg, 1 ) !default;
 $drawer-selected-hover-text: $selected-text !default;
