--- a/packages/bootstrap/scss/dropdowntree/_variables.scss
+++ b/packages/bootstrap/scss/dropdowntree/_variables.scss
@@ -1,3 +1,3 @@
 // Dropdowntree
-$dropdowntree-popup-padding-x: map-get( $spacing, 2 ) !default;
-$dropdowntree-popup-padding-y: map-get( $spacing, 2 ) !default;
+$dropdowntree-popup-padding-x: k-map-get( $spacing, 2 ) !default;
+$dropdowntree-popup-padding-y: k-map-get( $spacing, 2 ) !default;
