--- a/packages/bootstrap/scss/dropzone/_variables.scss
+++ b/packages/bootstrap/scss/dropzone/_variables.scss
@@ -1,6 +1,6 @@
 // Dropzone
-$dropzone-padding-x: map-get( $spacing, 2 ) !default;
-$dropzone-padding-y: map-get( $spacing, 2 ) !default;
+$dropzone-padding-x: k-map-get( $spacing, 2 ) !default;
+$dropzone-padding-y: k-map-get( $spacing, 2 ) !default;
 $dropzone-border-width: 1px !default;
 $dropzone-min-height: 220px !default;
 
@@ -8,17 +8,17 @@ $dropzone-font-family: $font-family !default;
 $dropzone-font-size: $font-size !default;
 $dropzone-line-height: $line-height !default;
 
-$dropzone-bg: contrast-wcag( $component-bg, $gray-100, $gray-900 ) !default;
+$dropzone-bg: if( k-is-light( $component-bg ), $gray-100, $gray-900 ) !default;
 $dropzone-text: $component-text !default;
 $dropzone-border: $component-border !default;
 
 $dropzone-icon-size: ( $icon-size * 3 ) !default;
-$dropzone-icon-spacing: map-get( $spacing, 6 ) !default;
-$dropzone-icon-text: try-tint( $dropzone-text, 8 ) !default;
+$dropzone-icon-spacing: k-map-get( $spacing, 6 ) !default;
+$dropzone-icon-text: k-try-tint( $dropzone-text, 8 ) !default;
 $dropzone-icon-hover-text: $primary !default;
 
 $dropzone-hint-font-size: null !default;
-$dropzone-hint-spacing: map-get( $spacing, 2 ) !default;
+$dropzone-hint-spacing: k-map-get( $spacing, 2 ) !default;
 $dropzone-hint-text: null !default;
 
 $dropzone-note-font-size: $font-size-xs !default;
