--- a/packages/bootstrap/scss/expansion-panel/_variables.scss
+++ b/packages/bootstrap/scss/expansion-panel/_variables.scss
@@ -8,7 +8,7 @@ $expander-border-width: 1px !default;
 $expander-header-padding-x: $padding-x-lg !default;
 $expander-header-padding-y: $padding-y * 2 !default;
 
-$expander-indicator-margin-x: calc(#{$padding-x / 2} * 1.5) !default;
+$expander-indicator-margin-x: calc( #{$padding-x / 2} * 1.5 ) !default;
 
 $expander-bg: $component-bg !default;
 $expander-text: $component-text !default;
@@ -20,7 +20,7 @@ $expander-header-bg: transparent !default;
 $expander-header-text: $expander-text !default;
 $expander-header-border: null !default;
 
-$expander-header-hover-bg: rgba(0, 0, 0, .04) !default;
+$expander-header-hover-bg: rgba( black, .04 ) !default;
 
 $expander-header-focused-bg: null !default;
 $expander-header-focused-shadow: $kendo-list-item-focus-shadow !default;
