--- a/packages/bootstrap/scss/gantt/_variables.scss
+++ b/packages/bootstrap/scss/gantt/_variables.scss
@@ -12,12 +12,12 @@ $gantt-treelist-bg: null !default;
 $gantt-treelist-text: null !default;
 $gantt-treelist-border: null !default;
 
-$gantt-nonwork-bg: rgba( contrast-wcag( $gantt-bg ), .025 ) !default;
+$gantt-nonwork-bg: rgba( k-contrast-color( $gantt-bg ), .025 ) !default;
 $gantt-nonwork-text: null !default;
 $gantt-nonwork-border: null !default;
 
 $gantt-line-size: 2px !default;
-$gantt-line-fill: mix( $panel-text, $panel-bg ) !default;
+$gantt-line-fill: k-color-mix( $panel-text, $panel-bg ) !default;
 $gantt-line-selected-fill: $selected-bg !default;
 
 $gantt-dot-size: 8px !default;
@@ -27,24 +27,24 @@ $gantt-dot-border: null !default;
 $gantt-dot-hover-bg: $gantt-bg !default;
 $gantt-dot-hover-border: $gantt-text !default;
 
-$gantt-milestone-bg: if( is-light($gantt-bg), $gray-300, $gray-700 ) !default;
-$gantt-milestone-border: try-shade( $gantt-milestone-bg, 2 ) !default;
+$gantt-milestone-bg: if( k-is-light( $gantt-bg ), $gray-300, $gray-700 ) !default;
+$gantt-milestone-border: k-try-shade( $gantt-milestone-bg, 2 ) !default;
 $gantt-milestone-selected-bg: $selected-bg !default;
 $gantt-milestone-selected-border: $selected-border !default;
 
-$gantt-summary-bg: mix( $gantt-text, $gantt-bg ) !default;
+$gantt-summary-bg: k-color-mix( $gantt-text, $gantt-bg ) !default;
 $gantt-summary-progress-bg: $gantt-text !default;
-$gantt-summary-selected-bg: mix( $selected-bg, $gantt-bg ) !default;
+$gantt-summary-selected-bg: k-color-mix( $selected-bg, $gantt-bg ) !default;
 $gantt-summary-progress-selected-bg: $selected-bg !default;
 
-$gantt-task-padding-x: map-get( $spacing, 2 ) !default;
-$gantt-task-padding-y: map-get( $spacing, 1 ) !default;
+$gantt-task-padding-x: k-map-get( $spacing, 2 ) !default;
+$gantt-task-padding-y: k-map-get( $spacing, 1 ) !default;
 $gantt-task-border-width: 1px !default;
-$gantt-task-bg: if( is-light($gantt-bg), $gray-300, $gray-700 ) !default;
-$gantt-task-text: contrast-wcag( $gantt-task-bg ) !default;
-$gantt-task-border: if( is-light($gantt-bg), $gray-400, $gray-600 ) !default;
-$gantt-task-progress-bg: if( is-light($gantt-bg), $gray-400, $gray-600 ) !default;
-$gantt-task-selected-bg: mix( $selected-bg, $gantt-bg ) !default;
+$gantt-task-bg: if( k-is-light( $gantt-bg ), $gray-300, $gray-700 ) !default;
+$gantt-task-text: k-contrast-color( $gantt-task-bg ) !default;
+$gantt-task-border: if( k-is-light( $gantt-bg ), $gray-400, $gray-600 ) !default;
+$gantt-task-progress-bg: if( k-is-light( $gantt-bg ), $gray-400, $gray-600 ) !default;
+$gantt-task-selected-bg: k-color-mix( $selected-bg, $gantt-bg ) !default;
 $gantt-task-selected-text: $selected-text !default;
 $gantt-task-selected-border: $selected-bg !default;
 $gantt-task-progress-selected-bg: $selected-bg !default;
@@ -78,10 +78,10 @@ $gantt-planned-bg: $primary !default;
 $gantt-planned-border: $gantt-planned-bg !default;
 
 $gantt-delayed-bg: $error !default;
-$gantt-delayed-bg-lighter: tint($gantt-delayed-bg, 5) !default;
+$gantt-delayed-bg-lighter: k-color-tint( $gantt-delayed-bg, 5 ) !default;
 
 $gantt-advanced-bg: $success !default;
-$gantt-advanced-bg-lighter: tint($gantt-advanced-bg, 5) !default;
+$gantt-advanced-bg-lighter: k-color-tint( $gantt-advanced-bg, 5 ) !default;
 
 $gantt-action-on-offset-text: #000000 !default;
 $gantt-offset-resize-handler-top: 45% !default;
