--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -31,7 +31,7 @@ $kendo-input-line-height: $input-line-height !default;
 $kendo-input-padding-x-sm: $input-padding-x-sm !default;
 $kendo-input-padding-y-sm: $input-padding-y-sm !default;
 $kendo-input-font-size-sm: $font-size-sm !default;
-$kendo-input-line-height-sm: ( 20 / 14 ) !default;
+$kendo-input-line-height-sm: k-math-div( 20, 14 ) !default;
 
 $kendo-input-padding-x-md: $input-padding-x !default;
 $kendo-input-padding-y-md: $input-padding-y !default;
@@ -146,10 +146,10 @@ $kendo-picker-disabled-shadow: null !default;
 
 $kendo-picker-outline-bg: null !default;
 $kendo-picker-outline-text: $kendo-button-text !default;
-$kendo-picker-outline-border: rgba( $kendo-picker-outline-text, .5) !default;
+$kendo-picker-outline-border: rgba( $kendo-picker-outline-text, .5 ) !default;
 
 $kendo-picker-outline-hover-bg: $kendo-picker-outline-text !default;
-$kendo-picker-outline-hover-text: contrast-wcag( $kendo-picker-outline-hover-bg ) !default;
+$kendo-picker-outline-hover-text: k-contrast-color( $kendo-picker-outline-hover-bg ) !default;
 $kendo-picker-outline-hover-border: $kendo-picker-outline-hover-bg !default;
 
 $kendo-picker-outline-focus-bg: null !default;
@@ -189,7 +189,7 @@ $kendo-input-clear-value-opacity: .5 !default;
 $kendo-input-clear-value-hover-text: null !default;
 $kendo-input-clear-value-hover-opacity: 1 !default;
 
-$kendo-input-values-margin-y: map-get( $spacing, thin ) !default;
+$kendo-input-values-margin-y: k-map-get( $spacing, thin ) !default;
 $kendo-input-values-margin-x: $kendo-input-values-margin-y !default;
 
 
