--- a/packages/bootstrap/scss/list/_variables.scss
+++ b/packages/bootstrap/scss/list/_variables.scss
@@ -10,25 +10,25 @@ $kendo-list-font-size-lg: $font-size-md !default;
 /// Line height of the list component, if no size is set.
 /// @group list
 $kendo-list-line-height: null !default;
-$kendo-list-line-height-sm: (20 / 14) !default;
+$kendo-list-line-height-sm: k-math-div( 20, 14 ) !default;
 $kendo-list-line-height-md: $line-height-md !default;
 $kendo-list-line-height-lg: $line-height-md !default;
 
 /// Horizontal padding of list header, if no size is set.
 /// @group list
 $kendo-list-header-padding-x: null !default;
-$kendo-list-header-padding-x-base: map-get( $spacing, 4 ) !default;
-$kendo-list-header-padding-x-sm: map-get( $spacing, 4 ) !default;
-$kendo-list-header-padding-x-md: map-get( $spacing, 4 ) !default;
-$kendo-list-header-padding-x-lg: map-get( $spacing, 4 ) !default;
+$kendo-list-header-padding-x-base: k-map-get( $spacing, 4 ) !default;
+$kendo-list-header-padding-x-sm: k-map-get( $spacing, 4 ) !default;
+$kendo-list-header-padding-x-md: k-map-get( $spacing, 4 ) !default;
+$kendo-list-header-padding-x-lg: k-map-get( $spacing, 4 ) !default;
 
 /// Vertical padding of list header, if no size is set.
 /// @group list
 $kendo-list-header-padding-y: null !default;
-$kendo-list-header-padding-y-base: map-get( $spacing, 1 ) !default;
-$kendo-list-header-padding-y-sm: map-get( $spacing, 1 ) !default;
-$kendo-list-header-padding-y-md: map-get( $spacing, 1 ) !default;
-$kendo-list-header-padding-y-lg: map-get( $spacing, 2 ) !default;
+$kendo-list-header-padding-y-base: k-map-get( $spacing, 1 ) !default;
+$kendo-list-header-padding-y-sm: k-map-get( $spacing, 1 ) !default;
+$kendo-list-header-padding-y-md: k-map-get( $spacing, 1 ) !default;
+$kendo-list-header-padding-y-lg: k-map-get( $spacing, 2 ) !default;
 
 /// Border width of list header.
 /// @group list
@@ -55,18 +55,18 @@ $kendo-list-header-font-weight: bold !default;
 /// Horizontal padding of list items, when no size is set.
 /// @group list
 $kendo-list-item-padding-x: null !default;
-$kendo-list-item-padding-x-base: map-get( $spacing, 4 ) !default;
-$kendo-list-item-padding-x-sm: map-get( $spacing, 4 ) !default;
-$kendo-list-item-padding-x-md: map-get( $spacing, 4 ) !default;
-$kendo-list-item-padding-x-lg: map-get( $spacing, 4 ) !default;
+$kendo-list-item-padding-x-base: k-map-get( $spacing, 4 ) !default;
+$kendo-list-item-padding-x-sm: k-map-get( $spacing, 4 ) !default;
+$kendo-list-item-padding-x-md: k-map-get( $spacing, 4 ) !default;
+$kendo-list-item-padding-x-lg: k-map-get( $spacing, 4 ) !default;
 
 /// Vertical padding of list items, when no size is set.
 /// @group list
 $kendo-list-item-padding-y: null !default;
-$kendo-list-item-padding-y-base: map-get( $spacing, 1 ) !default;
-$kendo-list-item-padding-y-sm: map-get( $spacing, 1 ) !default;
-$kendo-list-item-padding-y-md: map-get( $spacing, 1 ) !default;
-$kendo-list-item-padding-y-lg: map-get( $spacing, 2 ) !default;
+$kendo-list-item-padding-y-base: k-map-get( $spacing, 1 ) !default;
+$kendo-list-item-padding-y-sm: k-map-get( $spacing, 1 ) !default;
+$kendo-list-item-padding-y-md: k-map-get( $spacing, 1 ) !default;
+$kendo-list-item-padding-y-lg: k-map-get( $spacing, 2 ) !default;
 
 /// Font size of list items, if no size is set.
 /// @group list
@@ -85,18 +85,18 @@ $kendo-list-item-line-height-lg: null !default;
 /// Horizontal padding of list group items, when no size is set.
 /// @group list
 $kendo-list-group-item-padding-x: null !default;
-$kendo-list-group-item-padding-x-base: map-get( $spacing, 4 ) !default;
-$kendo-list-group-item-padding-x-sm: map-get( $spacing, 4 ) !default;
-$kendo-list-group-item-padding-x-md: map-get( $spacing, 4 ) !default;
-$kendo-list-group-item-padding-x-lg: map-get( $spacing, 4 ) !default;
+$kendo-list-group-item-padding-x-base: k-map-get( $spacing, 4 ) !default;
+$kendo-list-group-item-padding-x-sm: k-map-get( $spacing, 4 ) !default;
+$kendo-list-group-item-padding-x-md: k-map-get( $spacing, 4 ) !default;
+$kendo-list-group-item-padding-x-lg: k-map-get( $spacing, 4 ) !default;
 
 /// Vertical padding of list group items, when no size is set.
 /// @group list
 $kendo-list-group-item-padding-y: null !default;
-$kendo-list-group-item-padding-y-base: map-get( $spacing, 1 ) !default;
-$kendo-list-group-item-padding-y-sm: map-get( $spacing, 1 ) - map-get( $spacing, thin ) !default;
-$kendo-list-group-item-padding-y-md: map-get( $spacing, 1 ) !default;
-$kendo-list-group-item-padding-y-lg: map-get( $spacing, 1 ) + map-get( $spacing, thin ) !default;
+$kendo-list-group-item-padding-y-base: k-map-get( $spacing, 1 ) !default;
+$kendo-list-group-item-padding-y-sm: k-map-get( $spacing, 1 ) - k-map-get( $spacing, thin ) !default;
+$kendo-list-group-item-padding-y-md: k-map-get( $spacing, 1 ) !default;
+$kendo-list-group-item-padding-y-lg: k-map-get( $spacing, 1 ) + k-map-get( $spacing, thin ) !default;
 
 /// Border width of list group items.
 /// @group list
