--- a/packages/bootstrap/scss/listgroup/_variables.scss
+++ b/packages/bootstrap/scss/listgroup/_variables.scss
@@ -1,6 +1,6 @@
 // Listgroup
 $listgroup-border-width: 1px !default;
-$listgroup-border-radius: map-get( $spacing, 1 ) !default;
+$listgroup-border-radius: k-map-get( $spacing, 1 ) !default;
 
 $listgroup-font-size: $font-size !default;
 $listgroup-line-height: $line-height !default;
@@ -9,6 +9,6 @@ $listgroup-bg: $component-bg !default;
 $listgroup-text: $component-text !default;
 $listgroup-border: $component-border !default;
 
-$listgroup-item-padding-x: map-get( $spacing, 4 ) !default;
-$listgroup-item-padding-y: map-get( $spacing, 2 ) !default;
+$listgroup-item-padding-x: k-map-get( $spacing, 4 ) !default;
+$listgroup-item-padding-y: k-map-get( $spacing, 2 ) !default;
 $listgroup-item-border-width: $listgroup-border-width !default;
