--- a/packages/bootstrap/scss/pdf-viewer/_variables.scss
+++ b/packages/bootstrap/scss/pdf-viewer/_variables.scss
@@ -22,14 +22,14 @@ $pdf-viewer-page-spacing: 30px !default;
 $pdf-viewer-page-bg: white !default;
 $pdf-viewer-page-text: $component-text !default;
 $pdf-viewer-page-border: $component-border !default;
-$pdf-viewer-page-shadow: 0 0 ($pdf-viewer-page-spacing / 2) $pdf-viewer-page-border !default;
+$pdf-viewer-page-shadow: 0 0 k-math-div( $pdf-viewer-page-spacing, 2 ) $pdf-viewer-page-border !default;
 
 $pdf-viewer-search-dialog-padding-x: $toolbar-padding-x !default;
 $pdf-viewer-search-dialog-padding-y: calc( #{$toolbar-padding-x} * 2 ) !default;
 $pdf-viewer-search-dialog-spacing: $toolbar-spacing !default;
 
 $pdf-viewer-search-panel-border-width: 1px !default;
-$pdf-viewer-search-panel-border-radius: map-get( $spacing, 1 ) !default;
+$pdf-viewer-search-panel-border-radius: k-map-get( $spacing, 1 ) !default;
 $pdf-viewer-search-panel-bg: $component-bg !default;
 $pdf-viewer-search-panel-text: $component-text !default;
 $pdf-viewer-search-panel-border: $component-border !default;
