--- a/packages/bootstrap/scss/pivotgrid/_variables.scss
+++ b/packages/bootstrap/scss/pivotgrid/_variables.scss
@@ -1,5 +1,5 @@
 // Pivot grid
-$pivotgrid-spacer: map-get( $spacing, 4 ) !default;
+$pivotgrid-spacer: k-map-get( $spacing, 4 ) !default;
 $pivotgrid-padding-x: null !default;
 $pivotgrid-padding-y: null !default;
 $pivotgrid-font-family: $font-family !default;
@@ -19,21 +19,21 @@ $pivotgrid-bg: $component-bg !default;
 $pivotgrid-text: $component-text !default;
 $pivotgrid-border: $component-border !default;
 
-$pivotgrid-alt-border: try-shade($pivotgrid-border, 2) !default;
+$pivotgrid-alt-border: k-try-shade( $pivotgrid-border, 2 ) !default;
 
 $pivotgrid-headers-bg: $header-bg !default;
 $pivotgrid-headers-text: $header-text !default;
 $pivotgrid-headers-border: $header-border !default;
 
-$pivotgrid-total-bg: try-shade( $pivotgrid-bg, 1 ) !default;
+$pivotgrid-total-bg: k-try-shade( $pivotgrid-bg, 1 ) !default;
 $pivotgrid-total-text: $header-text !default;
 $pivotgrid-total-border: $header-border !default;
 
-$pivotgrid-hover-bg: darken($pivotgrid-bg, 7%) !default;
+$pivotgrid-hover-bg: k-color-darken( $pivotgrid-bg, 7% ) !default;
 $pivotgrid-hover-text: null !default;
 $pivotgrid-hover-border: null !default;
 
-$pivotgrid-selected-bg: rgba($selected-bg, .25) !default;
+$pivotgrid-selected-bg: rgba( $selected-bg, .25 ) !default;
 $pivotgrid-selected-text: null !default;
 $pivotgrid-selected-border: null !default;
 
@@ -53,7 +53,7 @@ $pivotgrid-configurator-content-padding-x: $pivotgrid-spacer !default;
 $pivotgrid-configurator-content-padding-y: .25rem !default;
 
 $pivotgrid-configurator-fields-margin-x: 0px !default;
-$pivotgrid-configurator-fields-margin-y: ( $pivotgrid-spacer / 2 ) !default;
+$pivotgrid-configurator-fields-margin-y: k-math-div( $pivotgrid-spacer, 2 ) !default;
 
 $pivotgrid-configurator-vertical-width: 320px !default;
 $pivotgrid-configurator-horizontal-height: 420px !default;
@@ -66,13 +66,13 @@ $pivotgrid-configurator-header-bg: null !default;
 $pivotgrid-configurator-header-text: $header-text !default;
 $pivotgrid-configurator-header-border: null !default;
 
-$pivotgrid-configurator-end-shadow: -3px 0px 6px rgba(0, 0, 0, .16) !default;
-$pivotgrid-configurator-start-shadow: 3px 0px 6px rgba(0, 0, 0, .16) !default;
-$pivotgrid-configurator-top-shadow: 0px -3px 6px rgba(0, 0, 0, .16) !default;
-$pivotgrid-configurator-bottom-shadow: 0px 3px 6px rgba(0, 0, 0, .16) !default;
+$pivotgrid-configurator-end-shadow: -3px 0px 6px rgba( black, .16 ) !default;
+$pivotgrid-configurator-start-shadow: 3px 0px 6px rgba( black, .16 ) !default;
+$pivotgrid-configurator-top-shadow: 0px -3px 6px rgba( black, .16 ) !default;
+$pivotgrid-configurator-bottom-shadow: 0px 3px 6px rgba( black, .16 ) !default;
 
-$pivotgrid-configurator-button-padding-x: map-get($spacing, 1) !default;
-$pivotgrid-configurator-button-padding-y: map-get($spacing, 1) !default;
+$pivotgrid-configurator-button-padding-x: k-map-get( $spacing, 1 ) !default;
+$pivotgrid-configurator-button-padding-y: k-map-get( $spacing, 1 ) !default;
 $pivotgrid-configurator-button-border-width: 1px !default;
 $pivotgrid-configurator-button-size: calc( #{$pivotgrid-line-height * 1em} + #{$pivotgrid-configurator-button-padding-y * 2} + #{$pivotgrid-configurator-button-border-width * 2} ) !default;
 
@@ -101,7 +101,7 @@ $pivotgrid-alt-text: $grid-header-text !default;
 $pivotgrid-chrome-border: $grid-border !default;
 
 $pivotgrid-container-bg: $header-bg !default;
-$pivotgrid-row-headers-bg: try-shade( $header-bg, .5 ) !default;
+$pivotgrid-row-headers-bg: k-try-shade( $header-bg, .5 ) !default;
 
 $pivotgrid-button-bg: null !default;
 $pivotgrid-button-text: null !default;
