--- a/packages/bootstrap/scss/popup/_variables.scss
+++ b/packages/bootstrap/scss/popup/_variables.scss
@@ -7,10 +7,10 @@ $popup-border-radius: $kendo-border-radius-md !default;
 $popup-font-size: $font-size !default;
 $popup-line-height: $line-height !default;
 
-$popup-content-padding-x: map-get( $spacing, 2 ) !default;
-$popup-content-padding-y: map-get( $spacing, 2 ) !default;
+$popup-content-padding-x: k-map-get( $spacing, 2 ) !default;
+$popup-content-padding-y: k-map-get( $spacing, 2 ) !default;
 
 $popup-bg: $component-bg !default;
 $popup-text: $component-text !default;
 $popup-border: $component-border !default;
-$popup-shadow: 0 2px 4px 0 rgba(0, 0, 0, .03), 0 4px 5px 0 rgba(0, 0, 0, .04) !default;
+$popup-shadow: 0 2px 4px 0 rgba( black, .03 ), 0 4px 5px 0 rgba( black, .04 ) !default;
