--- a/packages/bootstrap/scss/signature/_variables.scss
+++ b/packages/bootstrap/scss/signature/_variables.scss
@@ -6,15 +6,15 @@ $kendo-signature-lg-min-height: 110px;
 $kendo-signature-maximized-width: 750px !default;
 $kendo-signature-maximized-height: 252px !default;
 
-$kendo-signature-padding-x: map-get( $spacing, 3 ) !default;
-$kendo-signature-padding-x-sm: map-get( $spacing, 2 ) !default;
+$kendo-signature-padding-x: k-map-get( $spacing, 3 ) !default;
+$kendo-signature-padding-x-sm: k-map-get( $spacing, 2 ) !default;
 $kendo-signature-padding-x-md: $kendo-signature-padding-x !default;
-$kendo-signature-padding-x-lg: map-get( $spacing, 4 ) !default;
+$kendo-signature-padding-x-lg: k-map-get( $spacing, 4 ) !default;
 
-$kendo-signature-padding-y: map-get( $spacing, 1 ) !default;
-$kendo-signature-padding-y-sm: map-get( $spacing, thin ) !default;
+$kendo-signature-padding-y: k-map-get( $spacing, 1 ) !default;
+$kendo-signature-padding-y-sm: k-map-get( $spacing, thin ) !default;
 $kendo-signature-padding-y-md: $kendo-signature-padding-y !default;
-$kendo-signature-padding-y-lg: map-get( $spacing, 2 ) !default;
+$kendo-signature-padding-y-lg: k-map-get( $spacing, 2 ) !default;
 
 $kendo-signature-line-width: 1px !default;
 $kendo-signature-line-style: dashed !default;
@@ -45,5 +45,5 @@ $kendo-signature-sizes: (
     )
 ) !default;
 
-$kendo-signature-actions-gap: map-get( $spacing, 1 ) !default;
-$kendo-signature-maximized-line-width: map-get( $spacing, 1 ) - map-get( $spacing, hair ) !default;
+$kendo-signature-actions-gap: k-map-get( $spacing, 1 ) !default;
+$kendo-signature-maximized-line-width: k-map-get( $spacing, 1 ) - k-map-get( $spacing, hair ) !default;
