--- a/packages/bootstrap/scss/switch/_variables.scss
+++ b/packages/bootstrap/scss/switch/_variables.scss
@@ -61,7 +61,7 @@ $kendo-switch-off-track-focus-bg: null !default;
 $kendo-switch-off-track-focus-text: null !default;
 /// The border color of the track when the focused switch is not checked.
 /// @group switch
-$kendo-switch-off-track-focus-border: mix( $kendo-switch-off-track-bg, $primary ) !default;
+$kendo-switch-off-track-focus-border: k-color-mix( $kendo-switch-off-track-bg, $primary ) !default;
 /// The background gradient of the track when the focused switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-gradient: null !default;
@@ -153,7 +153,7 @@ $kendo-switch-on-track-focus-ring: .25rem solid rgba( $kendo-switch-on-track-bor
 
 /// The background of the track when the disabled switch is checked.
 /// @group switch
-$kendo-switch-on-track-disabled-bg: try-tint( $kendo-switch-on-track-bg, 50% ) !default;
+$kendo-switch-on-track-disabled-bg: k-try-tint( $kendo-switch-on-track-bg, 50% ) !default;
 /// The text color of the track when the disabled switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-text: null !default;
@@ -166,7 +166,7 @@ $kendo-switch-on-track-disabled-gradient: null !default;
 
 /// The background of the thumb when the switch is checked.
 /// @group switch
-$kendo-switch-on-thumb-bg: contrast-wcag( $kendo-switch-on-track-bg ) !default;
+$kendo-switch-on-thumb-bg: k-contrast-color( $kendo-switch-on-track-bg ) !default;
 /// The text color of the thumb when the switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-text: null !default;
