--- a/packages/bootstrap/scss/tabstrip/_variables.scss
+++ b/packages/bootstrap/scss/tabstrip/_variables.scss
@@ -33,7 +33,7 @@ $tabstrip-item-padding-y: $nav-item-padding-y !default;
 $tabstrip-item-border-width: 1px !default;
 /// Border radius of tabs
 /// @group tabstrip
-$tabstrip-item-border-radius: map-get( $spacing, 1 ) !default;
+$tabstrip-item-border-radius: k-map-get( $spacing, 1 ) !default;
 /// Spacing between tabs
 /// @group tabstrip
 $tabstrip-item-gap: $nav-item-margin !default;
@@ -79,17 +79,17 @@ $tabstrip-item-selected-gradient: null !default;
 
 $tabstrip-item-focused-shadow: $kendo-list-item-focus-shadow !default;
 
-$tabstrip-item-dragging-shadow: 0px 3px 4px rgba(0, 0, 0, .15) !default;
+$tabstrip-item-dragging-shadow: 0px 3px 4px rgba( black, .15 ) !default;
 
 $tabstrip-indicator-size: null !default;
 $tabstrip-indicator-color: null !default;
 
 /// Horizontal padding of tabstrip content
 /// @group tabstrip
-$tabstrip-content-padding-x: map-get( $spacing, 4 ) !default;
+$tabstrip-content-padding-x: k-map-get( $spacing, 4 ) !default;
 /// Vertical padding of tabstrip content
 /// @group tabstrip
-$tabstrip-content-padding-y: map-get( $spacing, 4 ) !default;
+$tabstrip-content-padding-y: k-map-get( $spacing, 4 ) !default;
 /// Width of border around tabstrip content
 /// @group tabstrip
 $tabstrip-content-border-width: $tabstrip-border-width !default;
