--- a/packages/bootstrap/scss/tilelayout/_variables.scss
+++ b/packages/bootstrap/scss/tilelayout/_variables.scss
@@ -8,5 +8,5 @@ $tilelayout-hint-border-radius: $card-border-radius !default;
 
 $tilelayout-bg: $gray-100 !default;
 
-$tilelayout-hint-bg: rgba(255, 255, 255, .2) !default;
+$tilelayout-hint-bg: rgba( white, .2 ) !default;
 $tilelayout-hint-border: $component-border !default;
