--- a/packages/bootstrap/scss/timeselector/_variables.scss
+++ b/packages/bootstrap/scss/timeselector/_variables.scss
@@ -8,8 +8,8 @@ $time-selector-bg: $component-bg !default;
 $time-selector-text: $component-text !default;
 $time-selector-border: $component-border !default;
 
-$time-selector-header-padding-x: map-get( $spacing, 1 ) !default;
-$time-selector-header-padding-y: map-get( $spacing, 1 ) !default;
+$time-selector-header-padding-x: k-map-get( $spacing, 1 ) !default;
+$time-selector-header-padding-y: k-map-get( $spacing, 1 ) !default;
 $time-selector-header-border-width: 0px !default;
 
 $time-list-width: 4em !default;
@@ -29,7 +29,7 @@ $time-list-highlight-height: calc( #{$time-selector-font-size * $time-selector-l
 $time-list-highlight-bg: $component-bg !default;
 $time-list-highlight-border: $component-border !default;
 
-$time-list-focused-bg: rgba(0, 0, 0, .02) !default;
+$time-list-focused-bg: rgba( black, .02 ) !default;
 
 
 // Time selector sizes
