--- a/packages/bootstrap/scss/treeview/_variables.scss
+++ b/packages/bootstrap/scss/treeview/_variables.scss
@@ -12,7 +12,7 @@ $kendo-treeview-font-size-lg: $font-size-md !default;
 /// Line height of the treeview component.
 /// @group treeview
 $kendo-treeview-line-height: $line-height !default;
-$kendo-treeview-line-height-sm: (20 / 14) !default;
+$kendo-treeview-line-height-sm: k-math-div( 20, 14 ) !default;
 $kendo-treeview-line-height-md: $line-height !default;
 $kendo-treeview-line-height-lg: $line-height !default;
 
@@ -22,22 +22,22 @@ $kendo-treeview-indent: 16px !default;
 
 /// Horizontal padding of treeview items.
 /// @group treeview
-$kendo-treeview-item-padding-x: map-get( $spacing, 3 ) !default;
-$kendo-treeview-item-padding-x-sm: map-get( $spacing, 2 ) !default;
-$kendo-treeview-item-padding-x-md: map-get( $spacing, 3 ) !default;
-$kendo-treeview-item-padding-x-lg: map-get( $spacing, 3 ) !default;
+$kendo-treeview-item-padding-x: k-map-get( $spacing, 3 ) !default;
+$kendo-treeview-item-padding-x-sm: k-map-get( $spacing, 2 ) !default;
+$kendo-treeview-item-padding-x-md: k-map-get( $spacing, 3 ) !default;
+$kendo-treeview-item-padding-x-lg: k-map-get( $spacing, 3 ) !default;
 /// Vertical padding of treeview items.
 /// @group treeview
-$kendo-treeview-item-padding-y: map-get( $spacing, 1 ) !default;
-$kendo-treeview-item-padding-y-sm: map-get( $spacing, 1 ) !default;
-$kendo-treeview-item-padding-y-md: map-get( $spacing, 1 ) !default;
-$kendo-treeview-item-padding-y-lg: map-get( $spacing, 2 ) !default;
+$kendo-treeview-item-padding-y: k-map-get( $spacing, 1 ) !default;
+$kendo-treeview-item-padding-y-sm: k-map-get( $spacing, 1 ) !default;
+$kendo-treeview-item-padding-y-md: k-map-get( $spacing, 1 ) !default;
+$kendo-treeview-item-padding-y-lg: k-map-get( $spacing, 2 ) !default;
 /// Border width of treeview items.
 /// @group treeview
 $kendo-treeview-item-border-width: 0px !default;
 /// Border radius of treeview items.
 /// @group treeview
-$kendo-treeview-item-border-radius: map-get( $spacing, 1 ) !default;
+$kendo-treeview-item-border-radius: k-map-get( $spacing, 1 ) !default;
 
 
 /// The sizes of the treeview.
