--- a/packages/bootstrap/scss/upload/_variables.scss
+++ b/packages/bootstrap/scss/upload/_variables.scss
@@ -9,18 +9,18 @@ $upload-bg: $component-bg !default;
 $upload-text: $component-text !default;
 $upload-border: $component-border !default;
 
-$upload-dropzone-padding-x: map-get( $spacing, 2 ) !default;
-$upload-dropzone-padding-y: map-get( $spacing, 2 ) !default;
+$upload-dropzone-padding-x: k-map-get( $spacing, 2 ) !default;
+$upload-dropzone-padding-y: k-map-get( $spacing, 2 ) !default;
 $upload-dropzone-bg: $header-bg !default;
 $upload-dropzone-text: $header-text !default;
 $upload-dropzone-border: $upload-border !default;
-$upload-dropzone-hover-bg: try-shade( $upload-dropzone-bg, .2 ) !default;
+$upload-dropzone-hover-bg: k-try-shade( $upload-dropzone-bg, .2 ) !default;
 
 $upload-status-text: $subtle-text !default;
 $upload-status-text-opacity: null !default;
 
-$upload-item-padding-x: map-get( $spacing, 4 ) !default;
-$upload-item-padding-y: map-get( $spacing, 4 ) !default;
+$upload-item-padding-x: k-map-get( $spacing, 4 ) !default;
+$upload-item-padding-y: k-map-get( $spacing, 4 ) !default;
 
 $upload-multiple-items-spacing: 12px !default;
 
